<resources>

    <string name="error_mesg_network">Unable to connect. Check your internet connection.</string>

    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_help">Help</string>
    <string name="title_detail">Forecast</string>
    <string name="title_settings">Settings</string>

    <string name="app_name">Weather</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>

    <string name="lbl_current">CURRENT</string>

    <string name="lbl_add_fav">Bookmark City (Type name or locate in Map)</string>
    <string name="lbl_fav">Bookmark Cities</string>

    <string name="lbl_max_temp">Max: </string>
    <string name="lbl_min_temp">Min: </string>
    <string name="lbl_humidity">Humidity: </string>
    <string name="lbl_wind">Wind: </string>

    <string name="lbl_last_update">Last updated at: </string>

    <string name="lbl_pref_unit">Unit System</string>
    <string name="lbl_metric">Metric System</string>
    <string name="lbl_imperial">Imperial System</string>

    <string name="lbl_reset_btn">Reset</string>
    <string name="lbl_reset_btn_desc">Reset all bookmarked cities.</string>
</resources>
