<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="model"
            type="com.backbase.weatherapp.details.DetailBindingModel"/>
    </data>
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swip_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/last_updated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_margin="@dimen/paddingNormal"
                android:textSize="@dimen/normalTextSize"/>

            <RelativeLayout
                android:id="@+id/todaylayout"
                android:layout_below="@id/last_updated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddingNormal"
                android:layout_margin="@dimen/paddingScreen"
                android:background="@drawable/grey_bk_shade">

                <ImageView
                    android:id="@+id/statusimage"
                    android:layout_width="@dimen/weatherIconSize"
                    android:layout_height="@dimen/weatherIconSize"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/sun"/>

                <TextView
                    android:id="@+id/status_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{model.status}"
                    android:layout_below="@id/statusimage"
                    android:layout_marginTop="@dimen/paddingScreen"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_current"
                    android:textStyle="bold|italic"
                    android:layout_below="@id/status_text"
                    android:layout_marginTop="@dimen/paddingScreen"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/textColorNormal"
                    android:text="@{model.city}"
                    android:textSize="@dimen/weatherMainCityTextSize"/>

                <TextView
                    android:id="@+id/currentdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/city"
                    android:textColor="@color/textColorNormal"
                    android:text="@{model.currentDate}"
                    android:layout_marginTop="@dimen/paddingNormal"
                    android:textSize="@dimen/normalTextSize"/>

                <TextView
                    android:id="@+id/temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorNormal"
                    android:text="@{model.temp}"
                    android:textSize="@dimen/weatherMainTempTextSize"/>

                <TextView
                    android:id="@+id/tempmaxlabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/temp"
                    android:textColor="@color/textColorNormal"
                    android:text="@string/lbl_max_temp"
                    android:textSize="@dimen/normalTextSize"/>

                <TextView
                    android:id="@+id/tempmax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/temp"
                    android:layout_toRightOf="@id/tempmaxlabel"
                    android:textColor="@color/textColorNormal"
                    android:text="@{model.temp_max}"
                    android:textSize="@dimen/normalTextSize"/>

                <TextView
                    android:id="@+id/tempminlabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tempmaxlabel"
                    android:textColor="@color/textColorNormal"
                    android:text="@string/lbl_min_temp"
                    android:textSize="@dimen/normalTextSize"/>

                <TextView
                    android:id="@+id/tempmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tempmaxlabel"
                    android:layout_toRightOf="@id/tempminlabel"
                    android:textColor="@color/textColorNormal"
                    android:layout_marginLeft="@dimen/paddingNormal"
                    android:text="@{model.temp_min}"
                    android:textSize="@dimen/normalTextSize"/>

                <TextView
                    android:id="@+id/dot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorNormal"
                    android:layout_toRightOf="@id/temp"
                    android:layout_marginTop="5dp"
                    android:text="O"
                    android:textSize="@dimen/normalTextSize"
                    />

                <TextView
                    android:id="@+id/unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/dot"
                    android:layout_alignTop="@id/temp"
                    android:textColor="@color/textColorNormal"
                    android:text="@{model.tempUnit}"
                    android:textSize="@dimen/weatherMainTempUnitTextSize"
                    />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/paddingNormal"
                    android:layout_below="@id/currentdate"
                    android:textColor="@color/textColorNormal"
                    android:layout_marginLeft="@dimen/paddingNormal"
                    android:text="@{model.humidity}"
                    android:textSize="@dimen/normalTextSize"
                    />

                <TextView
                    android:id="@+id/humidityTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/paddingNormal"
                    android:layout_toLeftOf="@id/humidity"
                    android:layout_below="@id/currentdate"
                    android:textColor="@color/textColorNormal"
                    android:text="@string/lbl_humidity"
                    android:textSize="@dimen/normalTextSize"
                    />

                <TextView
                    android:id="@+id/wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/humidity"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/textColorNormal"
                    android:layout_marginLeft="@dimen/paddingNormal"
                    android:text="@{model.wind}"
                    android:textSize="@dimen/normalTextSize"
                    />

                <TextView
                    android:id="@+id/windTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/wind"
                    android:layout_below="@id/humidityTitle"
                    android:textColor="@color/textColorNormal"
                    android:text="@string/lbl_wind"
                    android:textSize="@dimen/normalTextSize"
                    />

            </RelativeLayout>

            <LinearLayout
                android:layout_below="@id/todaylayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/blue_bk_shade"
                android:layout_margin="@dimen/paddingScreen"
                android:orientation="vertical">

                <android.support.design.widget.TabLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/tab"
                    android:background="@drawable/tabbtn"
                    app:tabTextColor="#757575"
                    app:tabTextAppearance="@style/TabText"
                    app:tabSelectedTextColor="@color/colorAccent"
                    >


                </android.support.design.widget.TabLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

        </RelativeLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

</layout>


